<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_movie_title_now_playing">Now Playing</string>
    <string name="feature_movie_title_popular">Popular</string>
    <string name="feature_movie_title_top_rated">Top Rated</string>
    <string name="feature_movie_title_upcoming">Upcoming</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="vote_avarage">Vote Avarage</string>
    <string name="cd_back_button">Back Button</string>
    <string name="text_vote_count">Vote Count</string>
    <string name="text_popularity">Popularity</string>
    <string name="text_release_date">Release Date</string>
</resources>