<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingBottom="@dimen/dimen_32x"
        tools:context=".ui.movies.detail.DetailMovieActivity">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_12x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_back_button"
            android:padding="@dimen/dimen_16x"
            android:src="@drawable/ic_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32x"
            android:text="@string/detail_movie"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20x"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivPoster"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintStart_toStartOf="@+id/ivPoster"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginStart="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_24x"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/cd_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:background="@color/blue" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18x"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ivPoster"
            app:layout_constraintTop_toBottomOf="@+id/ivPoster"
            tools:text="Behind Her Eyes" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvMovieTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

        <TextView
            android:id="@+id/tvTitleReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12x"
            android:text="@string/text_release_date"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16x"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tvOverview"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8x"
            android:drawablePadding="@dimen/dimen_8x"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/tvTitleReleaseDate"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleReleaseDate" />


        <TextView
            android:id="@+id/tvTitleVoteAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12x"
            android:text="@string/vote_avarage"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16x"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tvOverview"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />

        <TextView
            android:id="@+id/tvVoteAvarage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8x"
            android:drawablePadding="@dimen/dimen_8x"
            android:textColor="@color/gray"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="@+id/tvTitleVoteAverage"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleVoteAverage" />

        <TextView
            android:id="@+id/tvTitleVoteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12x"
            android:text="@string/text_vote_count"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16x"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tvVoteAvarage"
            app:layout_constraintTop_toBottomOf="@+id/tvVoteAvarage" />

        <TextView
            android:id="@+id/tvVoteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8x"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/tvTitleVoteCount"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleVoteCount" />

        <TextView
            android:id="@+id/tvTitlePopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12x"
            android:text="@string/text_popularity"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16x"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tvVoteCount"
            app:layout_constraintTop_toBottomOf="@+id/tvVoteCount" />

        <TextView
            android:id="@+id/tvPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8x"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/tvTitlePopularity"
            app:layout_constraintTop_toBottomOf="@+id/tvTitlePopularity" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitlePopularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>